--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1032,6 +1032,22 @@
 				<key>MinKernel</key>
 				<string></string>
 				<key>ExecutablePath</key>
+				<string>Contents/MacOS/AirportBrcmFixup</string>
+				<key>BundlePath</key>
+				<string>AirportBrcmFixup.kext</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string></string>
+				<key>MaxKernel</key>
+				<string></string>
+				<key>PlistPath</key>
+				<string>Contents/Info.plist</string>
+				<key>Enabled</key>
+				<true/>
+				<key>MinKernel</key>
+				<string></string>
+				<key>ExecutablePath</key>
 				<string>Contents/MacOS/AppleALC</string>
 				<key>BundlePath</key>
 				<string>AppleALC.kext</string>
@@ -1051,22 +1067,6 @@
 				<string>Contents/MacOS/BT4LEContinuityFixup</string>
 				<key>BundlePath</key>
 				<string>BT4LEContinuityFixup.kext</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string></string>
-				<key>MaxKernel</key>
-				<string></string>
-				<key>PlistPath</key>
-				<string>Contents/Info.plist</string>
-				<key>Enabled</key>
-				<true/>
-				<key>MinKernel</key>
-				<string></string>
-				<key>ExecutablePath</key>
-				<string></string>
-				<key>BundlePath</key>
-				<string>BrcmBluetoothInjector.kext</string>
 			</dict>
 			<dict>
 				<key>Comment</key>
@@ -1240,9 +1240,9 @@
 				<key>MinKernel</key>
 				<string></string>
 				<key>ExecutablePath</key>
-				<string>Contents/MacOS/onyx-the-black-cat</string>
+				<string>Contents/MacOS/WhateverGreen</string>
 				<key>BundlePath</key>
-				<string>onyx-the-black-cat.kext</string>
+				<string>WhateverGreen.kext</string>
 			</dict>
 		</array>
 		<key>Block</key>
@@ -1411,7 +1411,7 @@
 				<key>Enabled</key>
 				<true/>
 				<key>Arguments</key>
-				<string>-b -n DSDT -z</string>
+				<string></string>
 				<key>Path</key>
 				<string>acpidump.efi</string>
 				<key>Auxiliary</key>
@@ -1510,11 +1510,11 @@
 			<key>7C436110-AB2A-4BBB-A880-FE41995C9F82</key>
 			<dict>
 				<key>boot-args</key>
-				<string>kext-dev-mode=1 -v -lilubetaall -bt4lefxbeta keepsyms=1 brcmfx-country=#a alcid=2 ps2rst=0 -disablegfxfirmware</string>
+				<string>-v -lilubetaall -bt4lefxbeta keepsyms=1 brcmfx-country=#a alcid=2 ps2rst=0 -disablegfxfirmware</string>
 				<key>bootercfg</key>
 				<string>log=0 debug=0 level=0</string>
 				<key>csr-active-config</key>
-				<data>AwAAAA==</data>
+				<data>AQIAAA==</data>
 				<key>nvda_drv</key>
 				<data></data>
 				<key>prev-lang:kbd</key>
@@ -1607,18 +1607,18 @@
 			<key>AdviseWindows</key>
 			<false/>
 			<key>MLB</key>
-			<string>GENERATE_YOUR_OWN</string>
+			<string></string>
 			<key>ROM</key>
-			<data>R0VORVJBVEVfWU9VUl9PV04=</data>
+			<data></data>
 			<key>SpoofVendor</key>
 			<true/>
 			<key>SystemProductName</key>
 			<string>MacBookPro15,2
 </string>
 			<key>SystemSerialNumber</key>
-			<string>GENERATE_YOUR_OWN</string>
+			<string></string>
 			<key>SystemUUID</key>
-			<string>GENERATE_YOUR_OWN</string>
+			<string></string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
