--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -908,7 +908,7 @@
 			<key>FadtEnableReset</key>
 			<false/>
 			<key>NormalizeHeaders</key>
-			<true/>
+			<false/>
 			<key>RebaseRegions</key>
 			<false/>
 			<key>ResetHwSig</key>
@@ -947,24 +947,32 @@
 			<key>SetupVirtualMap</key>
 			<true/>
 			<key>RebuildAppleMemoryMap</key>
+			<true/>
+			<key>ProtectSecureBoot</key>
 			<false/>
+			<key>ProtectUefiServices</key>
+			<false/>
+			<key>SignalAppleOS</key>
+			<false/>
+			<key>SyncRuntimePermissions</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>DeviceProperties</key>
 	<dict>
 		<key>Add</key>
 		<dict>
-			<key>PciRoot(0x0)/Pci(0x1f,0x3)</key>
-			<dict>
-				<key>layout-id</key>
-				<data>AgAAAA==</data>
-			</dict>
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
 			<dict>
 				<key>device-id</key>
 				<data>wIcAAA==</data>
 				<key>AAPL,ig-platform-id</key>
 				<data>AADAhw==</data>
+			</dict>
+			<key>PciRoot(0x0)/Pci(0x1f,0x3)</key>
+			<dict>
+				<key>layout-id</key>
+				<data>AgAAAA==</data>
 			</dict>
 		</dict>
 	</dict>
@@ -1337,7 +1345,7 @@
 			<key>AppleXcpmCfgLock</key>
 			<true/>
 			<key>AppleXcpmExtraMsrs</key>
-			<true/>
+			<false/>
 			<key>CustomSMBIOSGuid</key>
 			<false/>
 			<key>DisableIoMapper</key>
@@ -1349,10 +1357,16 @@
 			<key>PanicNoKextDump</key>
 			<true/>
 			<key>PowerTimeoutKernelPanic</key>
-			<false/>
+			<true/>
 			<key>ThirdPartyDrives</key>
 			<false/>
 			<key>XhciPortLimit</key>
+			<false/>
+			<key>AppleXcpmForceBoost</key>
+			<false/>
+			<key>DummyPowerManagement</key>
+			<false/>
+			<key>IncreasePciBarSize</key>
 			<false/>
 		</dict>
 	</dict>
@@ -1366,13 +1380,23 @@
 			<key>HibernateMode</key>
 			<string>Auto</string>
 			<key>HideSelf</key>
-			<false/>
-			<key>PollAppleHotKeys</key>
 			<true/>
+			<key>PollAppleHotKeys</key>
+			<false/>
 			<key>ShowPicker</key>
 			<true/>
 			<key>Timeout</key>
-			<integer>4</integer>
+			<integer>5</integer>
+			<key>ConsoleAttributes</key>
+			<integer>0</integer>
+			<key>TakeoffDelay</key>
+			<integer>0</integer>
+			<key>PickerMode</key>
+			<string>Builtin</string>
+			<key>HideAuxiliary</key>
+			<false/>
+			<key>PickerAudioAssist</key>
+			<false/>
 		</dict>
 		<key>Debug</key>
 		<dict>
@@ -1384,6 +1408,8 @@
 			<integer>2147483650</integer>
 			<key>Target</key>
 			<integer>0</integer>
+			<key>AppleDebug</key>
+			<true/>
 		</dict>
 		<key>Entries</key>
 		<array>
@@ -1391,7 +1417,7 @@
 		<key>Security</key>
 		<dict>
 			<key>AllowNvramReset</key>
-			<false/>
+			<true/>
 			<key>ExposeSensitiveData</key>
 			<integer>2</integer>
 			<key>HaltLevel</key>
@@ -1400,6 +1426,10 @@
 			<string>Optional</string>
 			<key>ScanPolicy</key>
 			<integer>0</integer>
+			<key>AuthRestart</key>
+			<false/>
+			<key>AllowSetDefault</key>
+			<true/>
 		</dict>
 		<key>Tools</key>
 		<array>
@@ -1510,13 +1540,11 @@
 			<key>7C436110-AB2A-4BBB-A880-FE41995C9F82</key>
 			<dict>
 				<key>boot-args</key>
-				<string>-v -lilubetaall -bt4lefxbeta keepsyms=1 brcmfx-country=#a alcid=2 ps2rst=0 -disablegfxfirmware</string>
+				<string>-v keepsyms=1 brcmfx-country=#a alcid=2 ps2rst=0 -disablegfxfirmware</string>
 				<key>bootercfg</key>
 				<string>log=0 debug=0 level=0</string>
 				<key>csr-active-config</key>
 				<data>AQIAAA==</data>
-				<key>nvda_drv</key>
-				<data></data>
 				<key>prev-lang:kbd</key>
 				<data></data>
 			</dict>
@@ -1527,6 +1555,10 @@
 		<false/>
 		<key>LegacySchema</key>
 		<dict/>
+		<key>WriteFlash</key>
+		<true/>
+		<key>LegacyOverwrite</key>
+		<false/>
 	</dict>
 	<key>UEFI</key>
 	<dict>
@@ -1543,9 +1575,9 @@
 		<key>Input</key>
 		<dict>
 			<key>KeyForgetThreshold</key>
-			<integer>0</integer>
+			<integer>5</integer>
 			<key>KeyMergeThreshold</key>
-			<integer>0</integer>
+			<integer>2</integer>
 			<key>KeySupport</key>
 			<true/>
 			<key>KeySupportMode</key>
@@ -1557,7 +1589,7 @@
 			<key>PointerSupportMode</key>
 			<string></string>
 			<key>TimerResolution</key>
-			<integer>0</integer>
+			<integer>50000</integer>
 		</dict>
 		<key>Protocols</key>
 		<dict>
@@ -1581,6 +1613,14 @@
 			<false/>
 			<key>UnicodeCollation</key>
 			<false/>
+			<key>AppleAudio</key>
+			<false/>
+			<key>AppleDebugLog</key>
+			<false/>
+			<key>AppleSmcIo</key>
+			<false/>
+			<key>OSInfo</key>
+			<false/>
 		</dict>
 		<key>Quirks</key>
 		<dict>
@@ -1589,9 +1629,9 @@
 			<key>IgnoreInvalidFlexRatio</key>
 			<false/>
 			<key>ReleaseUsbOwnership</key>
-			<true/>
-			<key>RequestBootVarFallback</key>
 			<false/>
+			<key>RequestBootVarFallback</key>
+			<true/>
 			<key>RequestBootVarRouting</key>
 			<true/>
 			<key>UnblockFsConnect</key>
