Kill HDAEnabler - it's from 2008 and still works for some reason...

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -964,7 +964,7 @@
 			<key>PciRoot(0x0)/Pci(0x1f,0x3)</key>
 			<dict>
 				<key>layout-id</key>
-				<data>AgAAAA==</data>
+				<data>BwAAAA==</data>
 			</dict>
 		</dict>
 	</dict>
@@ -1115,22 +1115,6 @@
 				<string>Contents/MacOS/BrcmPatchRAM3</string>
 				<key>BundlePath</key>
 				<string>BrcmPatchRAM3.kext</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string></string>
-				<key>MaxKernel</key>
-				<string></string>
-				<key>PlistPath</key>
-				<string>Contents/Info.plist</string>
-				<key>Enabled</key>
-				<true/>
-				<key>MinKernel</key>
-				<string></string>
-				<key>ExecutablePath</key>
-				<string>Contents/MacOS/HDAEnabler</string>
-				<key>BundlePath</key>
-				<string>HDAEnabler.kext</string>
 			</dict>
 			<dict>
 				<key>Comment</key>
