--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -39,7 +39,7 @@
 				<true/>
 			</dict>
 		</array>
-		<key>Block</key>
+		<key>Delete</key>
 		<array>
 		</array>
 		<key>Patch</key>
@@ -992,9 +992,9 @@
 				<key>MinKernel</key>
 				<string></string>
 				<key>ExecutablePath</key>
-				<string>Contents/MacOS/FakeSMC</string>
+				<string>Contents/MacOS/Lilu</string>
 				<key>BundlePath</key>
-				<string>FakeSMC.kext</string>
+				<string>Lilu.kext</string>
 			</dict>
 			<dict>
 				<key>Comment</key>
@@ -1008,9 +1008,9 @@
 				<key>MinKernel</key>
 				<string></string>
 				<key>ExecutablePath</key>
-				<string>Contents/MacOS/Lilu</string>
+				<string>Contents/MacOS/VirtualSMC</string>
 				<key>BundlePath</key>
-				<string>Lilu.kext</string>
+				<string>VirtualSMC.kext</string>
 			</dict>
 			<dict>
 				<key>Comment</key>
@@ -1355,8 +1355,6 @@
 		<dict>
 			<key>HibernateMode</key>
 			<string>Auto</string>
-			<key>HideSelf</key>
-			<true/>
 			<key>PollAppleHotKeys</key>
 			<false/>
 			<key>ShowPicker</key>
@@ -1474,7 +1472,7 @@
 			<key>7C436110-AB2A-4BBB-A880-FE41995C9F82</key>
 			<dict>
 				<key>boot-args</key>
-				<string>-v keepsyms=1 brcmfx-country=#a ps2rst=0 -disablegfxfirmware -lilubetaall</string>
+				<string>-v keepsyms=1 brcmfx-country=#a -disablegfxfirmware -lilubetaall</string>
 				<key>bootercfg</key>
 				<string>log=0 debug=0 level=0</string>
 				<key>csr-active-config</key>
@@ -1483,7 +1481,7 @@
 				<data></data>
 			</dict>
 		</dict>
-		<key>Block</key>
+		<key>Delete</key>
 		<dict/>
 		<key>LegacyEnable</key>
 		<false/>
@@ -1501,9 +1499,7 @@
 		<key>Drivers</key>
 		<array>
 			<string>ApfsDriverLoader-64.efi</string>
-			<string>HPFanReset.efi</string>
 			<string>OpenRuntime.efi</string>
-			<string>OpenUsbKbDxe.efi</string>
 			<string>VBoxHfs-64.efi</string>
 		</array>
 		<key>Input</key>
@@ -1564,8 +1560,6 @@
 			<false/>
 			<key>ReleaseUsbOwnership</key>
 			<false/>
-			<key>RequestBootVarFallback</key>
-			<true/>
 			<key>RequestBootVarRouting</key>
 			<true/>
 			<key>UnblockFsConnect</key>
