Use a KC and fix WiFi

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1074,22 +1074,6 @@
 				<key>ExecutablePath</key>
 				<string></string>
 				<key>BundlePath</key>
-				<string>AirportBrcmFixup.kext/Contents/PlugIns/AirPortBrcm4360_Injector.kext</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string></string>
-				<key>MaxKernel</key>
-				<string></string>
-				<key>PlistPath</key>
-				<string>Contents/Info.plist</string>
-				<key>Enabled</key>
-				<true/>
-				<key>MinKernel</key>
-				<string></string>
-				<key>ExecutablePath</key>
-				<string></string>
-				<key>BundlePath</key>
 				<string>AirportBrcmFixup.kext/Contents/PlugIns/AirPortBrcmNIC_Injector.kext</string>
 			</dict>
 			<dict>
@@ -1514,7 +1498,7 @@
 				<key>prev-lang:kbd</key>
 				<data></data>
 				<key>booter-fileset-kernel</key>
-				<data>AA==</data>
+				<data>AQ==</data>
 			</dict>
 		</dict>
 		<key>Delete</key>
