--- a/EFI/OC/Kexts/Lilu.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/Lilu.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>20A4299v</string>
+	<string>20A5323l</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -29,19 +29,19 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>12A6159</string>
+	<string>12A8169g</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>10.16</string>
+	<string>11.0</string>
 	<key>DTSDKBuild</key>
-	<string>20A4299v</string>
+	<string>20A5323l</string>
 	<key>DTSDKName</key>
-	<string>macosx10.16</string>
+	<string>macosx11.0</string>
 	<key>DTXcode</key>
 	<string>1200</string>
 	<key>DTXcodeBuild</key>
-	<string>12A6159</string>
+	<string>12A8169g</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
