Use a KC to fix Big Sur beta 4

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1506,7 +1506,7 @@
 				<key>prev-lang:kbd</key>
 				<data></data>
 				<key>booter-fileset-kernel</key>
-				<data>AA==</data>
+				<data>AQ==</data>
 			</dict>
 			<key>4D1EDE05-38C7-4A6A-9CC6-4BCCA8B38C14</key>
 			<dict>
