--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1156,7 +1156,7 @@
 			<key>7C436110-AB2A-4BBB-A880-FE41995C9F82</key>
 			<dict>
 				<key>boot-args</key>
-				<string>-v keepsyms=1 brcmfx-country=#a alcid=21 -disablegfxfirmware -lilubetaall -brcmfxbeta debug=0x100 brcmfx-driver=2 vsmcgen=1</string>
+				<string>-v keepsyms=1 brcmfx-country=#a alcid=21 -disablegfxfirmware -lilubetaall -brcmfxbeta debug=0x100 brcmfx-driver=2 vsmcgen=1 igfxonln=1</string>
 				<key>bootercfg</key>
 				<string>log=0 debug=0 level=0</string>
 				<key>csr-active-config</key>
